Eliminate depreciations